tests/ui/tuple/coercion.stderr
error[E0308]: mismatched types
  --> $DIR/coercion.rs:8:6
   |
LL |     ((),) = (loop {},);
   |      ^^     ---------- this expression has type `(!,)`
   |      |
   |      expected `!`, found `()`
   |
   = note:   expected type `!`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:11:20
   |
LL |     let _: ((),) = x;
   |            -----   ^ expected `((),)`, found `(!,)`
   |            |
   |            expected due to this
   |
   = note: expected tuple `((),)`
              found tuple `(!,)`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:16:23
   |
LL |     let _: (&[u8],) = y;
   |            --------   ^ expected `(&[u8],)`, found `(&[_; 0],)`
   |            |
   |            expected due to this
   |
   = note: expected tuple `(&[u8],)`
              found tuple `(&[_; 0],)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
